Add message validation

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -20,7 +20,7 @@
     "head": "Proof of Concept"
   },
   "vision": {
-    "head": "Our vision",
+    "head": "Our Vision",
     "text": "We feel an immense desire for concentrating on the usage of IT tools in more down-to-earth aims. This makes us think of combining modern technologies with issues taking place during diverse daily activities of the global society. Only after solving a huge amount of underutilized troubles we have, we find it correct to concentrate on a creature of possibilities in totally new areas."
   },
   "team": {
