--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -20,7 +20,7 @@
     "head": "Proof of Concept"
   },
   "vision": {
-    "head": "Our vision",
+    "head": "Our Vision",
     "text": "We feel an immense desire for concentrating on the usage of IT tools in more down-to-earth aims. This makes us think of combining modern technologies with issues taking place during diverse daily activities of the global society. Only after solving a huge amount of underutilized troubles we have, we find it correct to concentrate on a creature of possibilities in totally new areas."
   },
   "team": {
@@ -36,9 +36,9 @@
     "Armen": "His personality and competences will make him a good suit for being our \u200BCOO (Chief Operating Officer)\u200B "
   },
   "contacts": {
-    "address": "Yerevan, Armenia  |  Innopolis, Russia",
-    "phone": "\nphone: +374 (55) 513-553 | +7 (999) 155-07-00 ",
-    "email": "email: info@garoon.tech"
+    "address": "Yerevan, Armenia",
+    "phone": "\nphone: +374 (77) 111-887 | +374 (95) 944-434 ",
+    "email": "email: "
   },
   "innovation": {
     "txt": "Innovation should reach everyone..."
@@ -57,5 +57,4 @@
     "user_four": "Eldert van Henten | Engineer at Wageningen University",
     "four": "“Humans are still better than robots, but there is a lot of effort going into automatic harvesting"
   }
-
 }
