Update Contact Us phone number
Updated the phone number of "Contact Us"

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -38,7 +38,7 @@
   },
   "contacts": {
     "address": "Yerevan, Armenia",
-    "phone": "\nphone: +374 (77) 111-887",
+    "phone": "\nphone: +374 (95) 944434",
     "email": "email: "
   },
   "innovation": {
